Tweaks on ascension layer/level formulas

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 					<div class="panel-body input-group">
 						<label id ="talLabel" for="tal" class="input-group-addon">Target Ascension layer</label>
 						<span class="input-group-btn">
-							<button class="btn btn-group btn-inline" style="border-radius:0" type="button" onclick="upgDec('tal'); drawAL();">
+							<button class="btn btn-group btn-inline" style="border-radius:0" type="button" onclick="upgDec('targetAscensionLayer'); drawAL();">
 								<strong>-</strong>
 							</button>
 						</span>
-						<input id="tal" type="text" style="text-align: center" class="form-control input-digits" value="1" disabled="true">
+						<input id="targetAscensionLayer" type="text" style="text-align: center" class="form-control input-digits" value="1" disabled="true">
 						<span class="input-group-btn">
-							<button class="btn btn-group" type="button" onclick="upgInc('tal');  drawAL();">
+							<button class="btn btn-group" type="button" onclick="upgInc('targetAscensionLayer');  drawAL();">
 								<strong>+</strong>
 							</button>
 						</span>
